crates/hir-def/tests/snapshots/lower_snapshots__plain_class.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

class Foo {
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
class Foo @1..14
