crates/hir-def/tests/snapshots/lower_snapshots__record_generic.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

record Pair<T extends Comparable<T>>(T first, T second, String... rest) {
}

PARSE_ERRORS:
<none>
ITEM_TREE:
file (java)
record Pair<T extends Comparable<T>>(T first, T second, String... rest) @1..76
