crates/hir-def/tests/snapshots/lower_snapshots__sealed_permits_and_non_sealed.snap
---
source: crates/hir-def/tests/lower_snapshots.rs
expression: out
---
SOURCE:

sealed class Shape permits Circle, Square {
}

non-sealed class Circle extends Shape {
}

PARSE_ERRORS:
Expected '{', found identifier @20..27
Expected ';', found '{' @43..44
Expected identifier or '_', found '-' @51..52
Expected ';', found '-' @51..52
Expected a class member (e.g., field or method) here @51..52
Expected '}' @90..90
ITEM_TREE:
file (java)
class Shape [sealed] @1..90
  field Circle: permits @28..34
  field Square: permits @35..42
  instance block @43..46
  class Circle extends Shape @58..89
